stateDiagram-v2
    %% Grouping into 4 logical phases matching the lifecycle architecture

    state "1. Planning & Spec" as Phase1 {
        state "Step 1: Intake — task registered [INTAKE]" as INTAKE
        state "Step 2: Interview — baseline and adaptive questions [INTERVIEW]" as INTERVIEW
        state "Step 3: Draft plan authored [DRAFT_PLAN]" as DRAFT_PLAN
    }

    state "2. Plan Review & Gate 1" as Phase2 {
        state "Step 4: Plan disposition & acceptance gate [PLAN_REVIEW]" as PLAN_REVIEW
        state "Step 5: Independent plan review — 1 or N rounds [MULTI_AGENT_REVIEW]" as MULTI_AGENT_REVIEW
        state "Step 6: Awaiting your approval [AWAITING_APPROVAL]" as AWAITING_APPROVAL
        state "Step 7: Approved — you said go [APPROVED]" as APPROVED
    }

    state "3. Execution & Gate 3" as Phase3 {
        state "Step 8: Implementation (isolated worktree) [IN_WORKTREE]" as IN_WORKTREE
        state "Step 9: Here's what changed — initial review [WORKTREE_REVIEW]" as WORKTREE_REVIEW
        state "Step 10: Multi-agent code review — 1 or N rounds [MULTI_AGENT_CODE_REVIEW]" as MULTI_AGENT_CODE_REVIEW
        state "Step 11: Verifying (tests, checks) [VERIFY_EXIT]" as VERIFY_EXIT
    }

    state "4. Closure" as Phase4 {
        state "Step 12: Retrospective — survey questions [RETROSPECTIVE]" as RETROSPECTIVE
        state "Step 13: Done [DONE]" as DONE
    }

    %% Phase 1 Transitions
    [*] --> INTAKE
    INTAKE --> INTERVIEW
    INTERVIEW --> DRAFT_PLAN : trivial path — short interview<br/>and smallest-change evidence complete
    INTERVIEW --> DRAFT_PLAN : standard path — full interview complete
    DRAFT_PLAN --> PLAN_REVIEW : submit concise/full plan<br/>trivial skips reviewers by default

    %% Phase 2 Transitions & Loops
    PLAN_REVIEW --> MULTI_AGENT_REVIEW : optional agent review (0 or more rounds)
    PLAN_REVIEW --> AWAITING_APPROVAL : plan accepted by the human (no review required)
    PLAN_REVIEW --> DRAFT_PLAN : changes requested<br/>revise artifacts and resubmit
    MULTI_AGENT_REVIEW --> PLAN_REVIEW : review complete<br/>merge outcome — repeat or accept
    MULTI_AGENT_REVIEW --> DRAFT_PLAN : changes requested<br/>revise artifacts and resubmit

    %% CRITICAL HUMAN GATE 1 (cryptographic: signed transition_request)
    AWAITING_APPROVAL --> APPROVED : CRITICAL HUMAN GATE 1 (signed) -<br/>human signs the transition_request with<br/>ssh-keygen -Y sign (passphrase prompt)<br/>Releases worktree & coding authority

    %% Phase 3 Transitions & Loops
    APPROVED --> IN_WORKTREE
    IN_WORKTREE --> WORKTREE_REVIEW : implementation + focused tests + inventory done
    WORKTREE_REVIEW --> MULTI_AGENT_CODE_REVIEW : you say yes<br/>then choose method/runtime/model/effort

    %% CRITICAL HUMAN GATE 3 (cryptographic: signed transition_request, two edges)
    WORKTREE_REVIEW --> VERIFY_EXIT : CRITICAL HUMAN GATE 3 (signed) -<br/>human signs a request bound to commit SHA,<br/>tracked-diff hash and untracked-files hash<br/>(direct acceptance, no skip flag exists)

    MULTI_AGENT_CODE_REVIEW --> WORKTREE_REVIEW : review package ready for re-submission
    MULTI_AGENT_CODE_REVIEW --> IN_WORKTREE : bounded changes<br/>synthesis + human approval
    MULTI_AGENT_CODE_REVIEW --> VERIFY_EXIT : CRITICAL HUMAN GATE 3 (signed) -<br/>human signs acceptance of the reviewed code<br/>(same bound request as the direct edge)

    %% Phase 4 Transitions
    VERIFY_EXIT --> RETROSPECTIVE : deterministic - tests + leak/ledger checks
    RETROSPECTIVE --> DONE : CLOSURE GATE (signed) -<br/>human signs a request that also binds<br/>the retrospective digest
    DONE --> [*]

    %% Bypass & Planning-Only Edges
    APPROVED --> RETROSPECTIVE : approved plan — human skips implementation
    INTERVIEW --> RETROSPECTIVE : emergency trivial/early close only
    INTAKE --> DONE : early close — same signed closure gate<br/>(any active state, no force-close string or flag)

    note right of APPROVED
        Critical Gate 1 (cryptographic):
        Unlocks file write authority and isolated
        worktree execution. Only a verified OpenSSH
        signature over the transition_request advances it.
    end note

    note right of WORKTREE_REVIEW
        Critical Gate 3 (cryptographic):
        Both edges into VERIFY_EXIT (direct and post-review)
        require a human signature over commit SHA + diff hash
        + untracked-files hash. The signature is verified and
        the request consumed once, in the commit transaction.
        Receipts, typed words, flags and actor strings cannot
        substitute.
    end note

    note right of DONE
        Every edge into DONE (normal closure and early close)
        needs the same human-signed transition_request.
    end note